# uCode

./: .clinerules  .gitignore  README.md  devlog.yaml  gridsmith.code-workspace  package-lock.json  package.json  ucode.code-workspace
runtimes/amos/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
runtimes/amos/ucode2/: __init__.py  cli.py
runtimes/amos/ucode2/liquid/: __init__.py
runtimes/amos/ucode2/prose/: __init__.py  renderer.py
runtimes/amos/ucode2/publish/: __init__.py
runtimes/amos/ucode2/script/: __init__.py
runtimes/homeauto/: CHANGELOG.md  HOMENEST_README.md  QUICKSTART.md  README.md  pyproject.toml  uHomeNest.code-workspace
runtimes/homeauto/docs/: CI-CD-SETUP-GUIDE.md  DEPLOYMENT-UHOME-SERVER.md  DEPLOYMENT-UHOMENEST.md  ENVIRONMENT-CONFIGURATION.md  EXAMPLES_GUIDE.md  FIRST-TIME-LAUNCH-GUIDE.md  MEDIA_VAULT.md  MONOREPO.md  README.md  RELEASE-POLICY.md  ROADMAP-UPDATE-20260420.md  ROADMAP.md  STATUS.md  THIN-UI-USAGE-GUIDE.md  UCODE3_GETTING_STARTED.md  UDN-SONIC-001.md  UHOME-DEV-ROADMAP.md  USXD_GUIDE.md  activation.md  architecture.md  base-runtime-boundary.md  boundary.md  contributor-dev-brief.md  education-dev-brief.md  matter-extension-handoff.md  thin-ui-feature-completion.md  uHOME-server-dev-brief.md  uHOME-server-education-dev-brief.md  uHOME-spec.md
runtimes/homeauto/docs/architecture/: UHOME-SERVER-DEV-PLAN.md
runtimes/homeauto/docs/architecture/media/: DVR-DESIGN.md
runtimes/homeauto/docs/clients/: BEACON-ACTIVATE.md  CLIENT-CAPABILITIES.md  HOUSEHOLD-API.md  INTEGRATION-GUIDE.md  LAUNCHER-API.md  PLAYBACK-API.md  README.md
runtimes/homeauto/docs/courses/: README.md
runtimes/homeauto/docs/decisions/: HOME-ASSISTANT-BRIDGE.md  UHOME-home-profile-decision.md  v1-5-3-UHOME-KIOSK.md
runtimes/homeauto/docs/examples/: DVR-EXAMPLES.md
runtimes/homeauto/docs/feeds/: README.md
runtimes/homeauto/docs/home-assistant/: README.md
runtimes/homeauto/docs/howto/: DEPENDENCY-MANAGEMENT.md  JELLYFIN-INTEGRATION.md  SONIC-STANDALONE-RELEASE-AND-INSTALL.md  UHOME-INSTALL-LANES.md
runtimes/homeauto/docs/installer/: SONIC-HOME-INSTALLER-GUIDE.md
runtimes/homeauto/docs/media-player/: README.md
runtimes/homeauto/docs/operations/: CLEAN-SHUTDOWN-RUNBOOK.md  GRACEFUL-DEGRADATION-RUNBOOK.md  LIBRARY-CACHE-REBUILD-RUNBOOK.md  OBSERVABILITY-GUIDE.md  OFFLINE-NODE-RUNBOOK.md  README.md  REGISTRY-CORRUPTION-RUNBOOK.md  STORAGE-DEGRADATION-RUNBOOK.md  UHOME-CONSOLE-LAUNCH-PATH.md
runtimes/homeauto/docs/pathway/: BUILD.md  LEARN.md  README.md  REPO-FAMILY.md  USE.md
runtimes/homeauto/docs/services/home-assistant/: PROVISIONING-SUMMARY.md  README.md
runtimes/homeauto/docs/specs/: UHOME-v1.5.md
runtimes/homeauto/docs/specs/surfaces/: JOTION_SURFACE_SPEC.md
runtimes/homeauto/docs/surfaces/: JOTION_SURFACE_INTEGRATION.md  README.md
runtimes/homeauto/docs/uhome-console/: README.md
runtimes/homeauto/docs/ui/: UHOME-DASHBOARD.md
runtimes/homeauto/docs/workspace/instructions/: uhome.md
runtimes/homeauto/docs/workspace/settings/: UHOME_SETTINGS.md
runtimes/homeauto/examples/usx/: goodnight.usx.json
runtimes/homeauto/server/api/: router.py
runtimes/homeauto/server/docs/: UHOME-DEV-ROADMAP.md
runtimes/homeauto/server/tests/: test_rules_engine_integration.py  test_rules_engine_integration_health.py  test_rules_engine_integration_mission_control.py  test_rules_engine_integration_other.py
runtimes/homeauto/skills/homenest-skill/: README.md  skill.yaml
runtimes/homeauto/specs/usx/: PHASE0_SUMMARY.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  USX_BUNDLE_FORMAT.md  bundle.schema.json  layout.schema.json  lens.schema.json  skin.schema.json
runtimes/homeauto/src/uhome_server/: app.py
runtimes/homeauto/src/uhome_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
runtimes/homeauto/surfaces/homenest/: HomeNestSurface.tsx  surface-definition.json
runtimes/homeauto/surfaces/jotion/: Dockerfile  docker-compose.jotion.yml  next.config.js  package.json  surface-definition.json  tailwind.config.ts
runtimes/homeauto/tinshed/: Cargo.toml
runtimes/homeauto/tinshed/beta2-core/: Cargo.toml  market.yaml
runtimes/homeauto/tinshed/beta2-mcp/: Cargo.toml  market.yaml
runtimes/homeauto/tinshed/beta2-spatial/: Cargo.toml  market.yaml
runtimes/homeauto/tinshed/beta2-vault-bridge/: Cargo.toml  market.yaml
runtimes/homeauto/tinshed/homenest-automation/: Cargo.toml
runtimes/homeauto/tinshed/homenest-debian/: Cargo.toml
runtimes/homeauto/tinshed/homenest-docs/: Cargo.toml
runtimes/homeauto/tinshed/homenest-feed/: Cargo.toml
runtimes/homeauto/tinshed/homenest-flatpak/: Cargo.toml
runtimes/homeauto/tinshed/homenest-grid/: Cargo.toml
runtimes/homeauto/tinshed/homenest-mcp/: Cargo.toml
runtimes/homeauto/tinshed/homenest-media/: Cargo.toml
runtimes/homeauto/tinshed/homenest-spec/: Cargo.toml
runtimes/homeauto/tinshed/homenest-tv/: Cargo.toml
runtimes/homeauto/tinshed/homenest-voice/: Cargo.toml
runtimes/homeauto/ui/usxd/: UDORenderer.tsx  UDXRenderer.tsx  usx-schema.json
runtimes/multimedia/: README.md  pyproject.toml
runtimes/multimedia/3dworld/: index.html  package.json
runtimes/multimedia/3dworld/src/: main.js
runtimes/multimedia/docs/: LAYER_MAP.md  README.md  UCODE3_CONSOLE_LAYBACK.md  UCODE3_HOMEKIT_BRIDGE.md
runtimes/multimedia/docs/specs/: WIREFRAME_SPEC.md
runtimes/multimedia/docs/themes/: README.md  WIREFRAME_THEME.md
runtimes/multimedia/src/mcp/: lance.rs  mod.rs
runtimes/multimedia/src/ucode4/: __init__.py
runtimes/multimedia/src/ucode4.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
runtimes/multimedia/tests/: __init__.py  test_camera.py  test_portal.py  test_scene.py  test_spatial.py  test_world.py
runtimes/multimedia/themes/wireframe/: wireframe-skin.json  wireframe.css
runtimes/multimedia/user/: README.md
runtimes/multimedia/user/global/: README.md
shared/: pyproject.toml
shared/src/: index.ts
shared/src/udos_shared/: __init__.py  coords.py  exceptions.py  models.py
shared/tests/: test_shared_grid.py
(+386 files in other folders)
