[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ucode2"
version = "1.0.0"
description = "uCode2 - ProseUI: Beautiful GFM markdown learning environment"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "uDos Team", email = "team@udos.io" },
]
keywords = ["markdown", "prose", "education", "udos", "learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Text Processing :: Markdown",
]

dependencies = [
    "markdown>=3.0",
    "pyyaml>=6.0",
    "liquidpy>=0.9",
]

[project.scripts]
ucode2 = "ucode2.cli:main"

[project.urls]
Homepage = "https://github.com/uDosGo/uCode2"
Repository = "https://github.com/uDosGo/uCode2.git"
Documentation = "https://github.com/uDosGo/uCode2#readme"

[tool.setuptools.packages.find]
include = ["ucode2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

