[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ucode4"
version = "0.1.0"
description = "uCode4 — Spatial/3D layer: Virtual worlds and spatial computing for uDos"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "uDos Team", email = "team@udos.io" },
]
keywords = ["udos", "spatial", "3d", "virtual-worlds", "spatial-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]

dependencies = [
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/uDosGo/uCode4"
Repository = "https://github.com/uDosGo/uCode4.git"
Documentation = "https://udos.io/docs"

[project.scripts]
ucode4 = "ucode4.cli:main"
