[package]
name = "beta2-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Core types, traits, and utilities for the uCode2 ecosystem"

[lib]
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }

# Direct dependencies
base64 = "0.22.1"
byteorder = "1.5.0"

[features]
default = []
