[package]
name = "beta2-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "MCP (Model Context Protocol) server for uCode2 — AI agent integration"

[[bin]]
name = "mcp-server"
path = "src/main.rs"

[dependencies]
# Workspace members
beta2-core = { path = "../beta2-core" }
beta2-vault-bridge = { path = "../beta2-vault-bridge" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

# Direct dependencies
serde_yaml = "0.9"
rmp-serde = "1.1"
interprocess = "2.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.21"
tempfile = "3.8"
chrono = "0.4"

[features]
default = []
