[package]
name = "beta2-spatial"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Spatial indexing and geo operations for uCode2 — R-tree, geo types"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geo = "0.27"
geo-types = "0.7"
rstar = "0.9"
log = "0.4"

[dev-dependencies]
tempfile = "3.10"