[package]
name = "beta2-vault-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "SQLite-backed vault storage bridge for uCode2 — encrypted document store"

[dependencies]
beta2-core = { path = "../beta2-core" }
serde = { workspace = true }
serde_yaml = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"

[[example]]
name = "basic_usage"