[package]
name = "homenest-automation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "HomeNest automation panel — scene management, OBF launcher, rule engine"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }

# Direct dependencies
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []
