[package]
name = "homenest-feed"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "HomeNest feed/spool viewer — unified timeline for RSS, HA events, media scans"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }

# Direct dependencies
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
quick-xml = "0.36"
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
