[package]
name = "homenest-flatpak"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "HomeNest Flatpak packaging — manifest and build scripts for Linux Mint"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
