[package]
name = "homenest-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "HomeNest MCP server — media playback, automation, TV/DVR control"

[[bin]]
name = "homenest-mcp"
path = "src/main.rs"

[dependencies]
# External dependencies (from uCode2)
beta2-core = { git = "https://github.com/uDosGo/uCode2.git" }
beta2-feed-spool = { git = "https://github.com/uDosGo/uCode2.git" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }

# Direct dependencies
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []
