[package]
name = "udos-vector-core"
version = "0.1.0"
edition = "2021"
description = "Universal Vector Core for uDos - SVG source of truth with bidirectional translation to pixel grids, ASCII/Teletext, and semantic descriptions"
authors = ["uDos Core Team"]
license = "MIT"

[features]
default = ["raster", "text"]
raster = []           # Cell/CELX rasterization
text = []             # ASCII/Teletext export
semantic = ["candle-core", "tokenizers"]  # AI description (optional)
full = ["raster", "text", "semantic"]

[dependencies]
# SVG core
svg = "0.13"                    # SVG parsing
usvg = "0.37"                   # SVG rendering tree
resvg = "0.37"                  # SVG rasterizer
svgtypes = "0.13"               # SVG type utilities

# Vector maths
lyon = "1.0"                    # Path tessellation
kurbo = "0.10"                  # Curves and paths

# Raster output
image = "0.25"                  # PNG export

# Text rendering
unicode-width = "0.1"           # Terminal character widths
termcolor = "1.4"               # Colour in terminals

# AI/Semantic (optional)
candle-core = { version = "0.4", optional = true }  # Local LLM
tokenizers = { version = "0.19", optional = true }

# uDos core (local paths)
# udos-core = { path = "../udos-core" }
# udos-image-decoder = { path = "../udos-image-decoder" }

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
thiserror = "1.0"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
